--- a/src/index.htm
+++ b/src/index.htm
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title >Document</title>
 </head>
 <body>
-    
+    <button onclick="printBooks()">cargar info</button>
+    <section></section>
+    <script src="services.js"></script>
 </body>
 </html>
