--- a/src/index.htm
+++ b/src/index.htm
@@ -7,6 +7,7 @@
 </head>
 <body>
     <button onclick="printBooks()">cargar info</button>
+    <button onclick="createBooks()">post</button>
     <section></section>
     <script src="services.js"></script>
 </body>
